[package]
name = "ta_backend"
version = "0.1.0"
edition = "2024"
default-run = "ta_backend" 

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10" # Or your current version
actix-cors = "0.7" # Or your current version
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.1" 
rand = "0.8"
dotenv = "0.15.0"
octocrab="0.44.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"